# Kerala_forecast

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: climate_scenario_extension.md  workflow.md
scripts/: plot_climate_extreme_scenario.py  plot_kerala_demo.py  plot_real_open_meteo_field_map.py  plot_real_open_meteo_kochi.py  plot_real_open_meteo_station_map.py
src/meteo_ml/: __init__.py  data.py  evaluate.py  features.py  kerala.py  model.py  scenarios.py  serve.py  train.py
tests/: test_pipeline.py  test_scenarios.py
