[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo-ml-portfolio"
version = "0.1.0"
description = "Compact ML precipitation postprocessing prototype for application portfolio."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.103.2",
  "numpy>=1.21,<2",
  "pydantic>=1.10,<2",
  "torch>=2.0,<3",
  "uvicorn==0.23.2",
  "xarray>=2023.1",
]

[project.optional-dependencies]
dev = ["pytest>=7,<8"]
grib = ["cfgrib>=0.9.14", "eccodes>=1.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

