[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo-ml-portfolio"
version = "0.1.0"
description = "Kerala rainfall forecast postprocessing prototype with PyTorch, xarray, FastAPI, and real-data visualization."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2.1,<3",
  "matplotlib>=3.9,<4",
  "pydantic>=2.7,<3",
  "torch>=2.0,<3",
  "truststore>=0.10,<1",
  "uvicorn>=0.30,<1",
  "xarray>=2024.7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx2>=2.4,<3"]
grib = ["cfgrib>=0.9.14", "eccodes>=1.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

